// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer default 1`] = `
Object {
  "locale": "EN",
  "period": 60,
  "source": "kraken",
}
`;

exports[`ui reducer locale 1`] = `
Object {
  "locale": "test",
  "period": 1,
  "source": "test",
}
`;

exports[`ui reducer period 1`] = `
Object {
  "locale": "EN",
  "period": 1,
  "source": "kraken",
}
`;

exports[`ui reducer source 1`] = `
Object {
  "locale": "EN",
  "period": 1,
  "source": "test",
}
`;
